--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -4,21 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fourth"
-    tools:context=".activities.onboarding.screens.ThirdScreen">
+    tools:context=".activities.ui.WelcomeFragment">
 
-
-    <TextView
-        android:id="@+id/finish"
-        android:layout_width="38dp"
-        android:layout_height="47dp"
-        android:text="skip"
-        android:textSize="18sp"
+    <ImageView
+        android:id="@+id/welcomeFragmentBackgroundImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white_color"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.847"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.807" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
